Task 2: site deployed to S3 and CloudFormation -- some serverless yml tweaks needed

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,11 +1,11 @@
-service: my-store-app
+service: my-store-app-service
 
 frameworkVersion: "3"
 
 provider:
   name: aws
   runtime: nodejs14.x
-  region: eu-west-1
+  region: us-east-1
   # setup profile for AWS CLI.
   # profile: node-aws
 
@@ -19,8 +19,9 @@ plugins:
 
 custom:
   client:
-    bucketName: my-store-app
+    bucketName: my-store-app-bucket-9128739481273498274
     distributionFolder: dist
+    blockPublicAccess: false
   s3BucketName: ${self:custom.client.bucketName}
 
   ## Serverless-single-page-app-plugin configuration:
@@ -36,7 +37,6 @@ resources:
       Type: AWS::S3::Bucket
       Properties:
         BucketName: ${self:custom.s3BucketName}
-        AccessControl: PublicRead
         WebsiteConfiguration:
           IndexDocument: index.html
           ErrorDocument: index.html
